--- a/learn.html
+++ b/learn.html
@@ -60,7 +60,7 @@ of the Moon."
 				Orbital motion? That is just what happens when gravity is the only force that applies. In space, which mostly consists of space, things are seldom touching each other. As gravity is the only way objects then interact, orbital mechanics becomes the tool of choice to analyse what is going on.
 			</p>
 			<!--Geogebra applet-->
-			<div id="applet_container2">
+			<div id="applet_container2" style="width:500px;height:500px;padding:10px;margin-bottom:20px;">
 				Applet not loading? <a href="img/orbit.png">Here is an image instead</a>
 			</div>
 			<!--end Geogebra applet-->
