complete division of pages into includes
Former-commit-id: bebd7621257da9f8527f1b0d8189684ac00e26ca

--- a/colonies.html
+++ b/colonies.html
@@ -96,9 +96,8 @@ ongoing high investment changes the possibilities and the best path."
 				</div>
 			</article>
 		</section>
-{% include asideLalandeColony.html %}
+{% include_relative _includes/colonies/asideLalandeColony.html %}
 	</div>
-{% include colonyModelsLalande.html %}
-<!--The above include has the include for the comments section -->
-{% include PearyColony.html %}
-{% include OrbitalColony.html %}
+{% include_relative _includes/colonies/colonyModelsLalande.html %}
+{% include_relative _includes/colonies/PearyColony.html %}
+{% include_relative _includes/colonies/OrbitalColony.html %}
