--- a/wackyTech.html
+++ b/wackyTech.html
@@ -23,4 +23,59 @@ description: "Some tech is just awesome."
 			</ul>
 		</div>
 	</section>
+	<div class="outerDiv">
+		<div class="innerDiv">
+			<h2>Nuclear thermal rockets</h2>
+			<p>Wackiness: <span style="color:LightGreen">Existing tech</span> ~1970</p>
+			<p>[[The reader must be introduced to the concept of delta-v before this]]
+As we know, lighter gasses are preferable in rocket exhaust as they utilize the supplied energy better in terms of momentum gained. An engine designer would thus like her rocket exhaust to consist of pure hydrogen. But that is not possible, no chemical reaction produces large amounts of hydrogen while still releasing usable amounts of chemical energy. At best, a combination like LH2/LOX would produce a mix of hydrogen and water. The fuel in a chemical rocket engine really has two purposes: to act as the propellant and to supply energy. However, from a generalized perspective, those two do not have to be the same.
+			</p>
+			<p>
+A nuclear engine does that. It uses pure hydrogen as propellant and gets the energy from a reactor. "Wait a minute" you say. "Why do we still have to use hydrogen then? Was not the reason that we had a limited amount of energy available?" Yes, that is true. The reactor can give us any amount of power we desire. Hydrogen on the other hand has several drawbacks like a very low density and needs to be stored at cryogenic temperatures. But nuclear engines have another limitation: The fuel rods have a melting point (typically around 3000K). Naturally, we would like the temperature in the engine to stay below that as nuclear meltdowns are messy. We can then only heat the propellant so much. Here we have an important gas law: At the same temperature, two gas molecules have the same kinetic energy. So, a tiny hydrogen molecule at 3000K would have the same energye as for example a water molecule at 3000K. We know that velocity is proportional to the square root of energy divided by mass, so hydrogen molecules would go faster, e.g. carry more momentum. Solid core nuclear engines end up at a specific impulse in the range 850-1000s, more than twice than the best chemical engines. (Your reactor core does not <i>have</i> to stay solid, there are some <a>wacky concepts</a> where it is not.)
+			</p>
+			<p>
+Twice the efficiency is just the instantanous benefit. It keeps on increasing with higher delta-v requirements. Propellant needed to accelerate 1000kg of mass to various velocities:
+				<table><!--I am using a table as a table. That must be allowed :P-->
+					<tbody>
+						<tr>
+							<th>Delta-v</th>
+							<th>Isp 450s</th>
+							<th>Isp 900s</th>
+							<th>Ratio</th>
+						</tr>
+						<tr>
+							<td>100 m/s</td>
+							<td>22.9kg</td>
+							<td>11.4kg</td>
+							<td>2.01</td>
+						</tr>
+						<tr>
+							<td>1000 m/s</td>
+							<td>254kg</td>
+							<td>120kg</td>
+							<td>2.12</td>
+						</tr>
+						<tr>
+							<td>5000 m/s</td>
+							<td>2105kg</td>
+							<td>762kg</td>
+							<td>2.76</td>
+						</tr>
+						<tr>
+							<td>10000 m/s</td>
+							<td>8641kg</td>
+							<td>2105kg</td>
+							<td>4.11</td>
+						</tr>
+						<tr>
+							<td>20000 m/s</td>
+							<td>91950kg</td>
+							<td>8640kg</td>
+							<td>10.64</td>
+						</tr>
+					</tbody>
+				</table>
+			</p>
+		</div>
+	</div>
 </div>
