--- a/colonies.html
+++ b/colonies.html
@@ -1,19 +1,7 @@
 ---
 layout: content
 title: Moon colony Sites and Structures
-description: "Sites and structure of the virtual lunar colonies.
-Lalande Crater colony uses rich mineral deposits there,
-Peary Crater gets the water frozen in the pole's permanent shadow,
-Orbital colonies offer tether transport and mine asteroids."
-headline: "The Colonies"
-intro: "To settle the Moon you have to find the right place, set up
-the right transport, and pursue the right business. All of these
-matters are open questions. Often the best options are ignored
-because it would be too expensive under current budgets, or there
-would be too much resistance from people who don't understand
-the risks and benefits of the technology involved. Consistent,
-ongoing high investment changes the possibilities and the best path."
----
+description: "Sites and structure of the virtual lunar colonies. Lalande Crater colony uses rich mineral deposits there, Peary Crater gets the water frozen in the pole's permanent shadow, Orbital colonies offer tether transport and mine asteroids." headline: "The Colonies" intro: "To settle the Moon you have to find the right place, set up the right transport, and pursue the right business. All of these matters are open questions. Often the best options are ignored because it would be too expensive under current budgets, or there would be too much resistance from people who don't understand the risks and benefits of the technology involved. Consistent, ongoing high investment changes the possibilities and the best path." ---
 
 	<div class="container" id="lalande">
 		<section>
@@ -21,42 +9,12 @@ ongoing high investment changes the possibilities and the best path."
 				<div class="innerDiv">
 					<h1>Lalande Crater: Young, Equatorial, Mineral-rich</h1>
 					<p>
-				The first virtual colony being built is a town beside Lalande Crater,
-				population: 20,000. (It isn't the first colony on the timeline
-    though, that's Peary.) It is
-				there because the region has the Moon's highest concentrations of
-				potassium, phosphorus, rare earth elements, and thorium. It also has
-				among the highest levels of titanium and iron. It is on the shore of
-				a lunar 'sea', so the minerals of both the highlands
-				and the basalt seas are close by. Lastly,
-				its sharp, detailed features indicate there is little
-    regolith overlaid on its interior due to the blast debris of later impacts
-    landing on it<sup class="note tooltip"
-				data-tooltip-content="#noteLal1">
-					[1]</sup>. Large portions of its lower slopes look to be solid rock
-    just below the surface, and one such place is the long raised shelf
-    1.5 km below the site of the colony, Cernan's Promise.
-				<br><br>
-				The premise is that the most
-				important industry on the Moon will be construction, both for expansion of
-				lunar colonies and for building things to send into space, such as spaceships,
-				space stations, satellites, and orbiting tethers. Income from selling space
-				infrastructure depends on the ability to
-				fabricate large and complex items on industrial scales. Income from selling residence,
-				tours, and broadcasting also depends on large pleasant facilities
-				and habitats being erected. Both things require vast quantities of a variety
-				of minerals, Lalande has top reserves of them all.
-				<br><br>
-				That makes it the best place to put the heavy industry that fabricates these
-				things - what it lacks is relatively light and can be brought from the
-				north pole or from asteroids mined in orbit.
-				Its advantageous position at the equator for launch and landing makes it
-				an excellent place for a large space port handling high volumes of cargo.
-				There are also several neat tricks
-				one can do in a young crater to create efficient, pleasant architecture.
-				The big money is going to be at
-				Lalande, so it has the first boom-town.
-					</p>
+				The first virtual colony being built is a town beside Lalande Crater, population: 20,000. (It isn't the first colony on the timeline though, that's Peary.) It is there because the region has the Moon's highest concentrations of potassium, phosphorus, rare earth elements, and thorium. It also has among the highest levels of titanium and iron. It is on the shore of a lunar 'sea', so the minerals of both the highlands and the basalt seas are close by. Lastly, its sharp, detailed features indicate there is little regolith overlaid on its interior due to the blast debris of later impacts landing on it<sup class="note tooltip" data-tooltip-content="#noteLal1"> [1]</sup>. Large portions of its lower slopes look to be solid rock just below the surface, and one such place is the long raised shelf 1.5 km below the site of the colony, Cernan's Promise.
+    <br><br>
+				The premise is that the most important industry on the Moon will be construction, both for expansion of lunar colonies and for building things to send into space, such as spaceships, space stations, satellites, and orbiting tethers. Income from selling space infrastructure depends on the ability to fabricate large and complex items on industrial scales. Income from selling residence, tours, and broadcasting also depends on large pleasant facilities and habitats being erected. Both things require vast quantities of a variety of minerals, Lalande has top reserves of them all.
+    <br><br>
+				That makes it the best place to put the heavy industry that fabricates these things - what it lacks is relatively light and can be brought from the north pole or from asteroids mined in orbit. Its advantageous position at the equator for launch and landing makes it an excellent place for a large space port handling high volumes of cargo. There are also several neat tricks one can do in a young crater to create efficient, pleasant architecture. The big money is going to be at Lalande, so it has the first boom-town.
+     </p>
 				</div>
 				<div class="tooltip_templates">
 					<span id="noteLal1">
