--- a/colonies.html
+++ b/colonies.html
@@ -1,7 +1,10 @@
 ---
 layout: content
 title: Moon colony Sites and Structures
-description: "Sites and structure of the virtual lunar colonies. Lalande Crater colony uses rich mineral deposits there, Peary Crater gets the water frozen in the pole's permanent shadow, Orbital colonies offer tether transport and mine asteroids." headline: "The Colonies" intro: "To settle the Moon you have to find the right place, set up the right transport, and pursue the right business. All of these matters are open questions. Often the best options are ignored because it would be too expensive under current budgets, or there would be too much resistance from people who don't understand the risks and benefits of the technology involved. Consistent, ongoing high investment changes the possibilities and the best path." ---
+description: "Sites and structure of the virtual lunar colonies. Lalande Crater colony uses rich mineral deposits there, Peary Crater gets the water frozen in the pole's permanent shadow, Orbital colonies offer tether transport and mine asteroids."
+headline: "The Colonies"
+intro: "To settle the Moon you have to find the right place, set up the right transport, and pursue the right business. All of these matters are open questions. Often the best options are ignored because it would be too expensive under current budgets, or there would be too much resistance from people who don't understand the risks and benefits of the technology involved. Consistent, ongoing high investment changes the possibilities and the best path."
+---
 
 	<div class="container" id="lalande">
 		<section>
