--- a/machines.html
+++ b/machines.html
@@ -7,3 +7,9 @@ intro: "Even to reach space we need incredibly complex machines. To live there w
 ---
 {% include_relative _includes/machines/machinesRobots.html %}
 {% include_relative _includes/machines/machinesBuilding.html %}
+
+{% comment %}
+machines.html
+	machinesRobots.html
+	machinesBuilding.html
+{% endcomment %}
