--- a/machines2.html
+++ b/machines2.html
@@ -8,3 +8,23 @@ intro: "These sections focus on the machines that come to the fore once you've b
 {% include_relative _includes/machines/machinesPower.html %}
 {% include_relative _includes/machines/machinesMining.html %}
 {% include_relative _includes/machines/machinesTransport.html %}
+
+{% comment %}
+machines2.html
+	machinesPower.html
+		machinesPowerSolarThermal.html
+		machinesPowerNuclear.html
+	machinesMining.html
+		Minerals.html
+		Refining.html
+	machinesTransport.html
+		transportNuclearShuttles.html
+		transportIondrive.html
+		transportCargoShip.html
+		transportTethers.html
+			verticalTether.html
+				verticalTether.svg
+			AsteroidAnchors.html
+			tetherLaunchers.html
+			EarthTether.html
+{% endcomment %}
