--- a/wackyTech.html
+++ b/wackyTech.html
@@ -24,7 +24,7 @@ description: "Some tech is just awesome."
 		</div>
 	</section>
 	<div class="outerDiv">
-		<div class="innerDiv">
+		<div class="innerDiv" id="nuclear">
 			<h2>Nuclear thermal rockets</h2>
 			<p>Wackiness: <span style="color:LightGreen">Existing tech</span> ~1970</p>
 			<p>[[The reader must be introduced to the concept of delta-v before this]]
