--- a/project.html
+++ b/project.html
@@ -89,6 +89,12 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 		that is part of the <a href="https://space.stackexchange.com/">
 			Space Exploration</a> stack.
 	</div>
+	<div class="sideDiv">
+		<p>Some of the things we have are standalone and not integrated into the website, for example
+		<a href="tools/engineSearch.html">"Engine Search"</a> a selection tool for rocket engines.</p>
+		<p>The interactive applets we have made can be downloaded from <a href="http://www.moonwards.com/GeoGebra/">www.moonwards.com/GeoGebra/</a>. The directory also contains quite a few that are not on the website yet.</p>
+		<p>We also have some datafiles available at <a href="http://www.moonwards.com/json/">www.moonwards.com/json/</a></p>
+	</div>
 	</aside>
 </div>
 <div class="container">
@@ -123,8 +129,8 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 							<h2>Sigvart Brendberg</h2>
 							<p>
 				I am a Norwegian high-school student, currently getting a science education.
-				I live on a small and remote island, and dislike cities as much as you would expect. In the process of learning math, physics and other cool stuff, I realized I was using an operating system that slowed me down, and thus immediately switched to Linux.
-				Starting there, I started my voyage to explore the world of free and open source software, computer programming, and the internet.
+				I live on a small and remote island, and dislike cities as much as you would expect. In the process of learning math, physics and other cool stuff, I realized how nice the free software philosophy is.
+				Starting there, I started my voyage to explore the world of computer programming and the internet.
 							</p>
 							<p>
 				On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.
