--- a/project.html
+++ b/project.html
@@ -148,6 +148,13 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 				</div>
 			</div>
 	</section>
+	<section id="resources">
+		<div class="outerDiv">
+			<div class="innerDiv">
+				{% include resources.html %}
+			</div>
+		</div>
+	</section>
 </div>
 
 
