jekyll tries to be 'clever' with the 404 page. Shame on you, Jekyll
Former-commit-id: 23a4b2480ebbf9aae6a23f7783dea64c34eed41e

--- a/404.html
+++ b/404.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-	{% include commonHeadElements.html %}
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
+	<meta name="theme-color" content="#ffffff">
+	<meta name="description" content="{{page.description}}">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/svg+xml" href="img/animatedIcon.svg"><!--svg icon in Firefox, ignored in other browsers-->
 	<title>Page Not Found</title>
 	<link rel="stylesheet" href="css/404css.nest.sass.css">
 </head>
