optimization calculation density impulse
Former-commit-id: 5f5cef942cd7ca34f50d1cda0ab5875b59ad52c2

--- a/project.html
+++ b/project.html
@@ -142,7 +142,7 @@ description: "Why it is important to colonize the Moon, and to plan publicly how
 							</p>
 							<p>
 				As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem.
-				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>
+				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, create animations and write about orbital mechanics and rocket engines.
 				Mostly however, I discuss new ideas with Kim.
 							</p>
 				</div>
