--- a/wackyTech.html
+++ b/wackyTech.html
@@ -209,7 +209,8 @@ We can calculate a few cutoff points using this equation:
 						</tr>
 					</tbody>
 				</table>
-And some more exotic ones using the few elements with a reasonable melting and boiling point combinded with a very high density:
+You might be wondering if it perhaps is beneficial to use a mix of two propellant in the transition between them. The answer is no.
+Here are some more exotic ones using the few elements with a reasonable melting and boiling point combinded with a very high density:
 				<table>
 					<tbody>
 						<tr>
@@ -230,7 +231,35 @@ And some more exotic ones using the few elements with a reasonable melting and b
 						</tr>
 					</tbody>
 				</table>
-Of course we can only use this approach to get the cutoff point between two different propellants. To get optimal solutions for more than that we need another equation. [[More equations soon]]
+Of course we can only use this approach to get the cutoff point between two different propellants. To get optimal solutions for more than that we need another equation.
+To get the cutoff point between the propellant 1 and propellant 3, we can apply a similar logic as before to set up the equation.
+$$\frac{e^{\frac{\Delta v_2-\Delta v_1}{v_2}}}{\rho_2} + \frac{e^{\frac{\Delta v_2-\Delta v_1}{v_2}}\left(e^{\frac{\Delta v_1}{v_1}}-1\right)}{\rho_1}=\frac{v_2}{\rho_3v_3}+\frac{v_2\left(e^{\frac{\Delta v_2-\Delta v_1}{v_2}}-1\right)}{\rho_2v_3}+\frac{v_2e^{\frac{\Delta v_2-\Delta v_1}{v_2}}\left(e^{\frac{\Delta v_1}{v_1}}-1\right)}{\rho_1v_3}$$
+We can solve this:
+$$\Delta v_2 = \Delta v_1 + v_2ln\left(\frac{v_1\rho_1\left(\rho_2-\rho_3\right)}{\rho_3\left(v_3-v_2\right)\left(\rho_1+\rho_2\left(e^{\frac{\Delta v_1}{v_1}}-1\right)\right)}\right)$$
+				<table>
+					<tbody>
+						<tr>
+							<th>Propellants</th>
+							<th>Secondary cutoff point</th>
+						</tr>
+						<tr>
+							<td>Water/Ammonia - methane</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Water/Ammonia - Hydrogen</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Water/Methane - Hydrogen</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Ammonia/Methane - Hydrogen</td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
 			</p>
 			<p>Optimization 2: Minimal thrust maximizing<br><br>
 Idea: Given a required velocity change, figure out how we can fill a tank with various propellants to get an optimal thrust-to-weight ratio.
