--- a/model.html
+++ b/model.html
@@ -19,7 +19,7 @@ intro: "How can a group of nations that have never worked together on any comple
         <h1>Moon Lifestyles</h1>
         <h1>Development of a Distinct Society</h1>
         <h1>Development of a Local Economy</h1>
-        <h1>Development of Local Laws and Intitutions</h1>
+        <h1>Development of Local Laws and Institutions</h1>
         <h1>Movement Towards Self-Determination</h1>
         <h1>Lunar Independence</h1>
         <h1>Turning Points in Lunar Society</h1>
