--- a/timeline.html
+++ b/timeline.html
@@ -120,7 +120,7 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, and 3 km/s less to get something back.</li>
    <li>The mining of ice from the poles now is used to fuel the cargo ship on the Earth/Moon run completely.</li>
   </ul>
-<p>A second asteroid retrieval mission is sent out from Earth to get the anchor mass for the equatorial tether complex. Target mass: 15 kilotons.</p>
+<p>A second asteroid retrieval mission is sent out from Earth to get the anchor mass for the equatorial tether complex. Target mass: 25 kilotons.</p>
 <p>Cargo runs between LEO and the polar tether occur at every opportunity, every 2 weeks, 26 per year.</p>
  </article>
  <article class="column">
@@ -143,7 +143,6 @@ This is a part of the site that is expanded and detailed as the project develops
     <li>They must be a married couple with no children under the age of 18, married at least 10 years, and at least 40 years of age. </li>
     <li>They must be scientists and engineers who can play an active role in studying and developing the Moon. Minimum qualification is that both have at least a bachelor's degree in the sciences or engineering, an one has a more advanced degree or a professional career in a relevant area.</li>
     <li>They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games. Ability in an art or a sport will be part of the criteria by which they are selected.</li>
-    <li>
     <li>They must donate their bodies to science upon death.</li>
     <li>As it is so important, might as well just say that they all must have had a vasectomy or a tubal ligation</li>
     </ul>
@@ -154,6 +153,12 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>Most of the astronauts would probably be in their mid-40s. They would probably be able to actively participate in colony life for at least 30 years. So, those countries in the list in the point above, for an annual investment of 0.1% of the national budget, would get 2 national superstars on the Moon, that can do way more to inspire national pride and collective interest in science and progress than anything they could do at home, for 30 or 40 years.</li>
   </ul>
    <p>There will be 7 rounds to this program. The second one goes partly to Peary, and partly to Lalande. The table shows the main aspects of each round.</p>
+  </article>
+</div>
+<div class="columnSet">
+<article class="spanAll">
+  <h5>The Residence Program - Basic structure and rules</h5>
+  <p>A lot happens during the course of the 7 rounds of the RP. By the time the last round is complete, Lalande and Peary have both reached the full extent shown in Phase 1 of the virtual colonies. Although the residents must qualify, and sign a contract stipulating their duties and obligations, they are free to pursue their own projects as time permits. In later rounds residents will have more free time and greater discretion to pursue activities aside from their official duties on the colony.</p>
   <table>
   <tr>
   <th>Round</th><th>Spaces</th><th>Price</th><th>Total Revenue</th>
@@ -162,7 +167,7 @@ This is a part of the site that is expanded and detailed as the project develops
   <td>1</td><td>200</td><td>$150 million US</td><td>$30 billion US</td>
   </tr>
   <tr>
-  <td colspan="4">only couples married >10 yr, over 40, no kids under 18, min. B.Sc. or B.Eng but higher preferred, one of couple post-doc or experienced pro, arts or sports ability. Note: Qualifications for all rounds are announced at the beginning of the program, leaving plenty of time to upgrade qualifications in preparation for later rounds.</td>
+  <td colspan="4">Only couples married >10 yr, over 40, no kids under 18, min. B.Sc. or B.Eng but higher preferred, one of couple post-doc or experienced pro, arts or sports ability. Note: Qualifications for all rounds are announced at the beginning of the program, leaving plenty of time for interested people to upgrade skills so they can apply.</td>
   </tr>
   <tr>
   <td>2</td><td>400</td><td>$75 million US</td><td>$30 billion US</td>
@@ -186,13 +191,13 @@ This is a part of the site that is expanded and detailed as the project develops
   <td>5</td><td>3200</td><td>$10 million US</td><td>$32 billion US</td>
   </tr>
   <tr>
-  <td colspan="4">Greater proportion of singles accepted.</td>
+  <td colspan="4">Greater proportion of singles accepted. Residents may now be sponsored by groups other than nations, but not by commercial entities. Some residents arrive representing foundations, professional associations, and universities. Corporate interests may provide funding, but may not directly sponsor a resident.</td>
   </tr>
   <tr>
   <td>6</td><td>6400</td><td>$5 million US</td><td>$32 billion US</td>
   </tr>
   <tr>
-  <td colspan="4">Fully mixed population, married or single, but all over 40 with no children under 18. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds. </td>
+  <td colspan="4">Fully mixed population, married and single, but all over 40 with no children under 18. Qualification still based on education - seeking a majority of people with strong science and engineering backgrounds, but a significant minority with superlative humanities backgrounds. </td>
   </tr>
   <tr>
   <td>7</td><td>12800</td><td>$5 million US</td><td>$64 billion US</td>
@@ -203,4 +208,22 @@ This is a part of the site that is expanded and detailed as the project develops
  </table>
 <p>Price for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 25,400 souls.</p>
  </article>
+</div>
+<div class="columnSet">
+  <article class="column">
+    <h2>Transport cont'd</h2>
+    <h5>Asteroid for Equatorial Tether arrives in orbit</h5>
+    <p>
+    This is going to be the real transport hub for the Moon, together with Cernan's Promise, and later Lalande City. It develops into a colony in its own right. It is another carbonaceous asteroid, this time massing 25 metric kilotons. It is placed in a circular orbit 5000 km above the surface, so that it has the same orbital period as the polar tether and they will never be at risk of collision.
+    </p>
+    <p>
+    The asteroid is mined, and as material from it is sent to Cernan's Promise components for a space station are sent back up, plus gravel and rocks to maintain or increase its mass. 
+    </p>
+  </article>
+  <article class="column">
+    <h2>Colony Dev. con'd</h2>
+  </article>
+  <article class="column">
+    <h2>Socio-Economic Dev. cont'd</h2>
+  </article>
 </div>
